# ppplot

./: .gitignore  CITATION.cff  LICENCE  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: page.yml
docs/: Contributing.md  conf.py  index.rst
src/ppplot/: __init__.py  api.py  filtering.py  io.py  plotting.py  profile.py  types.py
tests/: test_io_and_api.py  test_ppplot.py  test_profile_math.py
web/: index.html  tsconfig.json  vite.config.ts
web/src/: csv.ts  filter.ts  main.ts  mathjax-shim.d.ts  mathjax.ts  plot.ts  plotly-shim.d.ts  profile.ts  styles.css  templates.ts  types.ts
